changed the name of the reset app

--- a/WritingApp/app/src/main/res/values/strings.xml
+++ b/WritingApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Writing App</string>
+    <string name="app_name">RevoReset</string>
     <string name="data_1">Data 1</string>
     <string name="data_2">Data 2</string>
 </resources>
